--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -31806,5 +31806,117 @@
         "published": "Mon, 29 Dec 2025 10:38:38 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Delhi is set to roll out Aadhaar-linked Pink Saheli Smart Cards for women commuters, replacing the paper-based pink ticket system on Delhi Transport Corporation buses from January 2026.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-dtc-aadhaar-mandatory-pink-saheli-bus-card-delhi/\">Delhi Transport Corporation to Introduce Aadhaar-Linked Smart Cards for Women\u2019s Free Bus Travel in January 2026</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/news/850594/samsung-tv-google-photos-integration-2026",
+        "title": "Google Photos is coming to Samsung TVs in 2026",
+        "link": "https://www.theverge.com/news/850594/samsung-tv-google-photos-integration-2026",
+        "published": "2025-12-29T06:48:46-05:00",
+        "source": "The Verge",
+        "summary": "Google Photos will finally be available on TVs next year, starting with an upcoming integration for Samsung TVs. Samsung announced that the planned integration will \"seamlessly bring the photos people capture on their phones to Samsung TVs, where they can appear in a larger, cinematic format,\" and that it wants Google Photos to be \"deeply [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-pet-hair-vacuums/",
+        "title": "The Best Vacuum for Pet Hair\u2014We Tested Many to Find Which Ones Work Best (2026)",
+        "link": "https://www.wired.com/gallery/best-pet-hair-vacuums/",
+        "published": "Mon, 29 Dec 2025 12:02:00 +0000",
+        "source": "WIRED",
+        "summary": "Cordless, handheld, robot, and traditional\u2014we tested them all to find the vacuum that\u2019s fantastic for fur."
+    },
+    {
+        "id": "https://www.wired.com/story/worst-hacks-of-2025/",
+        "title": "The Worst Hacks of 2025",
+        "link": "https://www.wired.com/story/worst-hacks-of-2025/",
+        "published": "Mon, 29 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "From university breaches to cyberattacks that shut down whole supply chains, these were the worst cybersecurity incidents of the year."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-body-pillows/",
+        "title": "The Best Body Pillow, Tested and Reviewed (2025)",
+        "link": "https://www.wired.com/gallery/best-body-pillows/",
+        "published": "Mon, 29 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "From the classic body pillow to unique shapes for optimal limb support, we tested a wide range of body pillows designed for side sleepers."
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/29/1129308/bangladesh-garment-sustainability-frugal-factories/",
+        "title": "Bangladesh\u2019s garment-making industry is getting greener",
+        "link": "https://www.technologyreview.com/2025/12/29/1129308/bangladesh-garment-sustainability-frugal-factories/",
+        "published": "Mon, 29 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "Pollution from textile production\u2014dyes, chemicals, and heavy metals like lead and cadmium\u2014is common in the waters of the Buriganga River as it runs through Dhaka, Bangladesh. It\u2019s among many harms posed by a garment sector that was once synonymous with tragedy: In 2013, the eight-story Rana Plaza factory building collapsed, killing 1,134 people and injuring&#8230;"
+    },
+    {
+        "id": "https://thehugheslectures.info/the-lectures/",
+        "title": "Feynman's Hughes Lectures: 950 pages of notes",
+        "link": "https://thehugheslectures.info/the-lectures/",
+        "published": "Mon, 29 Dec 2025 10:43:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46419273\">Comments</a>"
+    },
+    {
+        "id": "https://rubymamistvalove.com/block-editor",
+        "title": "Developing a Beautiful and Performant Block Editor in Qt C++ and QML",
+        "link": "https://rubymamistvalove.com/block-editor",
+        "published": "Fri, 26 Dec 2025 22:06:15 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46396824\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-takes-5-billion-stake-in-intel-under-september-agreement/articleshow/126232227.cms",
+        "title": "Nvidia takes $5 billion stake in Intel under September agreement",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/nvidia-takes-5-billion-stake-in-intel-under-september-agreement/articleshow/126232227.cms",
+        "published": "Mon, 29 Dec 2025 17:45:20 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The \u200cleading \u200cAI chip designer said in September \u200cit would pay $23.28 per share for Intel common stock, in a deal that is seen as a \u200bmajor financial lifeline \u200bfor the chipmaker after years \u200cof missteps \u200dand capital intensive production \u200dcapacity expansions drained its finances."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/pm-modi-to-inaugurate-ai-impact-summit-global-leaders-including-bill-gates-confirmed-meity-secretary/articleshow/126231674.cms",
+        "title": "PM Modi to inaugurate AI Impact Summit, global leaders including Bill Gates confirmed: MeitY Secretary",
+        "link": "https://economictimes.indiatimes.com/tech/technology/pm-modi-to-inaugurate-ai-impact-summit-global-leaders-including-bill-gates-confirmed-meity-secretary/articleshow/126231674.cms",
+        "published": "Mon, 29 Dec 2025 17:12:24 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "\"We expect about over 100 global AI leaders, including CXOs, CSOs, leading academics and other thinkers in the space, we are having a large number of high impact events, both in terms of pre events, which are going on even as we speak,\" he said."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/pills-tiktok-and-weight-loss-apps-the-consumer-driven-future-of-glp-1s/articleshow/126231560.cms",
+        "title": "Pills, TikTok and weight-loss apps: the consumer-driven future of GLP-1s\u200b",
+        "link": "https://economictimes.indiatimes.com/tech/technology/pills-tiktok-and-weight-loss-apps-the-consumer-driven-future-of-glp-1s/articleshow/126231560.cms",
+        "published": "Mon, 29 Dec 2025 17:06:58 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Reuters spoke to three-dozen people inside the industry including retailers, drugmakers, telehealth providers and investors to show how the weight-loss sector is shifting to better meet consumers."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/openai-seeks-candidate-for-a-stressful-role-offers-over-555000-a-year/articleshow/126231249.cms",
+        "title": "OpenAI seeks candidate for a \u2018stressful\u2019 role; offers over $555,000 a year",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/openai-seeks-candidate-for-a-stressful-role-offers-over-555000-a-year/articleshow/126231249.cms",
+        "published": "Mon, 29 Dec 2025 16:49:54 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "OpenAI chief Sam Altman said in a post on X that this was a \u201ccritical role\u201d at a pivotal moment for the company. While AI models are advancing rapidly and delivering major benefits, he said they are also beginning to create serious challenges."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/arvind-fashions-acquire-3125-stake-of-flipkart-arvind-youth-brands-for-135-cr",
+        "title": "Arvind Fashions to acquire 31.25% stake of Flipkart in Arvind Youth Brands for Rs 135 cr",
+        "link": "https://yourstory.com/2025/12/arvind-fashions-acquire-3125-stake-of-flipkart-arvind-youth-brands-for-135-cr",
+        "published": "Mon, 29 Dec 2025 11:59:21 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Arvind Youth Brands Pvt Ltd (AYBPL) is currently engaged in the business of wholesale and retail of apparel and accessories under the brand name 'Flying Machine'."
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-explained-indiamart-openai-lawsuit-visibility-ai-driven-web/",
+        "title": "Explained: IndiaMART vs OpenAI Lawsuit \u2013 Who Controls Visibility On The AI-Driven Web",
+        "link": "https://www.medianama.com/2025/12/223-explained-indiamart-openai-lawsuit-visibility-ai-driven-web/",
+        "published": "Mon, 29 Dec 2025 12:12:16 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Learn what IndiaMART has alleged OpenAI and ChatGPT of in the Calcutta High Court. Meanwhile, the next hearing in this case will happen on January 13 in West Bengal's capital.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-explained-indiamart-openai-lawsuit-visibility-ai-driven-web/\">Explained: IndiaMART vs OpenAI Lawsuit \u2013 Who Controls Visibility On The AI-Driven Web</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-user-driven-ai-bots-crawling-grows-15x-in-2025-cloudflare-report/",
+        "title": "Cloudflare Report Shows How AI Bots Crawling Is Growing, Not Sending Users to Sources",
+        "link": "https://www.medianama.com/2025/12/223-user-driven-ai-bots-crawling-grows-15x-in-2025-cloudflare-report/",
+        "published": "Mon, 29 Dec 2025 11:13:22 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Cloudflare's 2025 internet trends report highlights how dual-purpose AI bots crawling has become a standard practice by tech giants, with user-driven bots growing 15 times more than AI-training ones</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-user-driven-ai-bots-crawling-grows-15x-in-2025-cloudflare-report/\">Cloudflare Report Shows How AI Bots Crawling Is Growing, Not Sending Users to Sources</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
