📚 Auto-update: News data refreshed - 2025-12-29 13:31 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -31918,5 +31918,133 @@
         "published": "Mon, 29 Dec 2025 11:13:22 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Cloudflare's 2025 internet trends report highlights how dual-purpose AI bots crawling has become a standard practice by tech giants, with user-driven bots growing 15 times more than AI-training ones</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-user-driven-ai-bots-crawling-grows-15x-in-2025-cloudflare-report/\">Cloudflare Report Shows How AI Bots Crawling Is Growing, Not Sending Users to Sources</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/846829/hbo-max-best-shows-2025",
+        "title": "The best shows to watch on HBO Max from 2025",
+        "link": "https://www.theverge.com/entertainment/846829/hbo-max-best-shows-2025",
+        "published": "2025-12-29T08:30:00-05:00",
+        "source": "The Verge",
+        "summary": "With all the drama surrounding Warner Bros. Discovery's plans to sell itself to another company, it's not currently clear how much longer HBO Max will continue to exist in its current form. But for the time being, the streamer is chock full of solid series you might want to consider watching if you find yourself [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/850599/xiaomi-17-ultra-leica-edition-zoom-ring",
+        "title": "Xiaomi\u2019s 17 Ultra Leica edition has a rotatable camera zoom",
+        "link": "https://www.theverge.com/news/850599/xiaomi-17-ultra-leica-edition-zoom-ring",
+        "published": "2025-12-29T08:23:33-05:00",
+        "source": "The Verge",
+        "summary": "Xiaomi used the Christmas period to launch its top flagship phone for the year, the 17 Ultra. It drops the extra rear display that's the key selling point of the 17 Pro, but instead adds in the option of a manual zoom ring, built directly into the phone's camera island. That rotating zoom is only [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850074/2025-windows-arm-laptops-qualcomm-intel-amd-nvidia",
+        "title": "Windows on Arm had another good year",
+        "link": "https://www.theverge.com/gadgets/850074/2025-windows-arm-laptops-qualcomm-intel-amd-nvidia",
+        "published": "2025-12-29T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "In 2024, Qualcomm's Snapdragon X chips finally made Arm-based Windows laptops viable. Unlike previous Arm laptops that struggled to even run Windows well, this new class offered solid performance and the best battery life on Windows, and they impressed us in Microsoft's own Surface Laptop and Surface Pro offerings. But inconsistent app compatibility remained the [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/entertainment/850407/liz-lopatto-ask-me-anything",
+        "title": "I\u2019m The Verge\u2019s Senior Internet Typist, ask me anything while Nilay\u2019s away!",
+        "link": "https://www.theverge.com/entertainment/850407/liz-lopatto-ask-me-anything",
+        "published": "2025-12-29T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Hello from the dead week of the year, when all sane people have logged off to spend time with their families. This is when I typically write at least one deeply weird post while I'm working over the holiday. One time I got left alone on New Year's Day and posted about cats all day [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/imp-mini-arcade-pro/",
+        "title": "iMP Tech Mini Arcade Pro Review: A Nintendo Switch Arcade Cabinet",
+        "link": "https://www.wired.com/review/imp-mini-arcade-pro/",
+        "published": "Mon, 29 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "A fun diversion for retro gaming on the Nintendo Switch 2\u2014if you can stand to look at it."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/big-tech-basically-took-trumps-unpredictable-trade-war-lying-down/",
+        "title": "Big Tech basically took Trump\u2019s unpredictable trade war lying down",
+        "link": "https://arstechnica.com/tech-policy/2025/12/big-tech-basically-took-trumps-unpredictable-trade-war-lying-down/",
+        "published": "Mon, 29 Dec 2025 12:00:29 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "From Apple gifting a gold statue to the US taking a stake in Intel."
+    },
+    {
+        "id": "https://www.engadget.com/home/samsung-plans-to-integrate-google-photos-into-its-tvs-132739713.html?src=rss",
+        "title": "Samsung plans to integrate Google Photos into its TVs",
+        "link": "https://www.engadget.com/home/samsung-plans-to-integrate-google-photos-into-its-tvs-132739713.html?src=rss",
+        "published": "Mon, 29 Dec 2025 13:27:39 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Samsung has <a href=\"https://news.samsung.com/global/samsung-plans-to-bring-google-photos-to-samsung-ai-tv-lineup-helping-users-relive-their-favorite-memories-on-the-big-screen\"><ins>announced</ins></a> that it &quot;aims to be the first&quot; to natively integrate Google Photos into TVs. The aim is for Google Photos to work seamlessly with <a href=\"https://news.samsung.com/global/samsung-vision-ai-companion-bringing-conversational-ai-to-households-worldwide\"><ins>Vision AI Companion</ins></a"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-afeela-ces-2026-press-conference-130048921.html?src=rss",
+        "title": "How to watch the Sony Afeela CES 2026 press conference",
+        "link": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-afeela-ces-2026-press-conference-130048921.html?src=rss",
+        "published": "Mon, 29 Dec 2025 13:00:48 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"Sony Honda Mobility\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/3f099890-d9ef-11f0-a3f3-bb8a02df8254\" style=\"height: 1800px; width: 3200px;\" /><figcaption></figcaption></figure>\n<p>Longtime CES observers know that Sony's press conference is the traditional capper to the press day that precedes the show floor's official opening the following day. And while that appears to be the same for 2026, there's a twist: Instead of an overview of Sony's electronics, video ga"
+    },
+    {
+        "id": "https://www.theocharis.dev/blog/kidnapped-by-deutsche-bahn/",
+        "title": "Kidnapped by Deutsche Bahn",
+        "link": "https://www.theocharis.dev/blog/kidnapped-by-deutsche-bahn/",
+        "published": "Mon, 29 Dec 2025 12:24:00 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46419970\">Comments</a>"
+    },
+    {
+        "id": "https://www.cia.gov/readingroom/docs/CIA-RDP96-00789R002800180001-2.pdf",
+        "title": "CIA Star Gate Project: An Overview (1993) [pdf]",
+        "link": "https://www.cia.gov/readingroom/docs/CIA-RDP96-00789R002800180001-2.pdf",
+        "published": "Mon, 29 Dec 2025 03:16:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46417110\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-change-gmail-email-address/",
+        "title": "You may finally be able to fix your embarrassing Gmail address - here's how",
+        "link": "https://www.zdnet.com/article/how-to-change-gmail-email-address/",
+        "published": "Mon, 29 Dec 2025 13:05:00 GMT",
+        "source": "Latest news",
+        "summary": "Official documents indicate a long-awaited change might be coming."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/inmobi-nobroker-yulu-founders-commit-rs-100-crore-for-new-school-at-iit-kanpur/articleshow/126232680.cms",
+        "title": "InMobi, NoBroker, Yulu founders commit Rs 100-crore for new school at IIT Kanpur",
+        "link": "https://economictimes.indiatimes.com/tech/funding/inmobi-nobroker-yulu-founders-commit-rs-100-crore-for-new-school-at-iit-kanpur/articleshow/126232680.cms",
+        "published": "Mon, 29 Dec 2025 18:14:49 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "IIT Kanpur's Millennium Batch of 2000 has committed Rs 100 crore to establish a new school. This institution will focus on technology, policy, ethics, and societal impact. It aims to enhance IIT Kanpur's existing programs with interdisciplinary teaching and leadership development. This initiative reflects a growing emphasis on preparing institutions for future challenges."
+    },
+    {
+        "id": "https://inc42.com/buzz/captain-fresh-withdraws-confidential-ipo-papers/",
+        "title": "Captain Fresh Withdraws Confidential IPO Papers",
+        "link": "https://inc42.com/buzz/captain-fresh-withdraws-confidential-ipo-papers/",
+        "published": "Mon, 29 Dec 2025 13:23:39 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Ahead Of IPO, Captain Fresh Converts Into A Public Entity\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/07/Captain-Fresh-IPO-ftr.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Accel-backed B2B seafood brand Captain Fresh has withdrawn its DRHP which it filed via the confidential route. As per the&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/comets-fy25-revenue-quadruples-to-inr-29-cr/",
+        "title": "Comet\u2019s FY25 Revenue Quadruples To INR 29 Cr",
+        "link": "https://inc42.com/buzz/comets-fy25-revenue-quadruples-to-inr-29-cr/",
+        "published": "Mon, 29 Dec 2025 12:30:05 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"comet FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/comet-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />D2C sneaker brand Comet\u2019s revenue nearly quadrupled to INR 29.1 Cr in the financial year 2024-25 (FY25) from INR 7.3&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-ai-slop-videos-youtube-algorithmic-recommendations/",
+        "title": "AI Slop Videos Dominating 33% YouTube Feeds, Algorithmic Recommendations Behind It: Study",
+        "link": "https://www.medianama.com/2025/12/223-ai-slop-videos-youtube-algorithmic-recommendations/",
+        "published": "Mon, 29 Dec 2025 12:31:59 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>The study found that AI slop is taking over the YouTube feed because it doesn't need a large number of channels, as they rely on algorithmic recommendations, not subscribers</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-ai-slop-videos-youtube-algorithmic-recommendations/\">AI Slop Videos Dominating 33% YouTube Feeds, Algorithmic Recommendations Behind It: Study</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-zepto-files-rs-11000-crore-ipo-with-sebi/",
+        "title": "Zepto Files Draft Papers For Rs 11,000 Cr IPO, But Profitability Questions Loom Over Quick Commerce",
+        "link": "https://www.medianama.com/2025/12/223-zepto-files-rs-11000-crore-ipo-with-sebi/",
+        "published": "Mon, 29 Dec 2025 12:31:58 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Zepto has filed draft IPO papers with SEBI via the confidential pre-filing route for a Rs 11,000 crore listing, marking a key step toward a public debut.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-zepto-files-rs-11000-crore-ipo-with-sebi/\">Zepto Files Draft Papers For Rs 11,000 Cr IPO, But Profitability Questions Loom Over Quick Commerce</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
