--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -32046,5 +32046,85 @@
         "published": "Mon, 29 Dec 2025 12:31:58 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Zepto has filed draft IPO papers with SEBI via the confidential pre-filing route for a Rs 11,000 crore listing, marking a key step toward a public debut.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-zepto-files-rs-11000-crore-ipo-with-sebi/\">Zepto Files Draft Papers For Rs 11,000 Cr IPO, But Profitability Questions Loom Over Quick Commerce</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/samsung-plans-to-bring-google-photos-to-its-tvs-in-2026/",
+        "title": "Samsung plans to bring Google Photos to its TVs in 2026",
+        "link": "https://techcrunch.com/2025/12/29/samsung-plans-to-bring-google-photos-to-its-tvs-in-2026/",
+        "published": "Mon, 29 Dec 2025 14:06:23 +0000",
+        "source": "TechCrunch",
+        "summary": "Samsung said that Memories features for Google Photos will be exclusive to its TVs for six months"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/vcs-predict-strong-enterprise-ai-adoption-next-year-again/",
+        "title": "VCs predict strong enterprise AI adoption next year \u2014 again",
+        "link": "https://techcrunch.com/2025/12/29/vcs-predict-strong-enterprise-ai-adoption-next-year-again/",
+        "published": "Mon, 29 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "More than 20 venture capitalists share their thoughts on AI agents, enterprise AI budgets and more for 2026."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/remembering-the-best-and-worst-about-windows-10-on-the-year-it-technically-died/",
+        "title": "Remembering what Windows 10 did right\u2014and how it made modern Windows more annoying",
+        "link": "https://arstechnica.com/gadgets/2025/12/remembering-the-best-and-worst-about-windows-10-on-the-year-it-technically-died/",
+        "published": "Mon, 29 Dec 2025 13:00:01 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Remembering Windows 10's rollout can help diagnose what ails Windows 11."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/i-switched-to-esim-in-2025-and-i-am-full-of-regret/",
+        "title": "I switched to eSIM in 2025, and I am full of regret",
+        "link": "https://arstechnica.com/gadgets/2025/12/i-switched-to-esim-in-2025-and-i-am-full-of-regret/",
+        "published": "Mon, 29 Dec 2025 12:45:50 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Swapping SIM cards used to be easy, and then came eSIM."
+    },
+    {
+        "id": "https://balajmarius.com/writings/vibe-coding-a-bookshelf-with-claude-code/",
+        "title": "Show HN: Vibe coding a bookshelf with Claude Code",
+        "link": "https://balajmarius.com/writings/vibe-coding-a-bookshelf-with-claude-code/",
+        "published": "Mon, 29 Dec 2025 13:22:59 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46420453\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/drpaneas/libgodc",
+        "title": "Libgodc: Write Go Programs for Sega Dreamcast",
+        "link": "https://github.com/drpaneas/libgodc",
+        "published": "Mon, 29 Dec 2025 13:43:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46420672\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-add-passkey-to-microsoft-account/",
+        "title": "I replaced my Microsoft account password with a passkey - and you should, too",
+        "link": "https://www.zdnet.com/article/how-to-add-passkey-to-microsoft-account/",
+        "published": "Mon, 29 Dec 2025 14:00:00 GMT",
+        "source": "Latest news",
+        "summary": "You can make your Microsoft account far more secure if you ditch your password. But if you plan to do so, there's a step you absolutely must not skip."
+    },
+    {
+        "id": "https://www.zdnet.com/article/linux-and-open-source-2026-predictions/",
+        "title": "Linux will be unstoppable in 2026 - but one open-source legend may not survive",
+        "link": "https://www.zdnet.com/article/linux-and-open-source-2026-predictions/",
+        "published": "Mon, 29 Dec 2025 13:38:00 GMT",
+        "source": "Latest news",
+        "summary": "Linux and open source are gearing up for a big year, with desktop growth, Rust, and security leading the way."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/ettech-explainer-how-the-december-31-riders-strike-could-hit-q-comm-food-delivery/articleshow/126233671.cms",
+        "title": "ETtech Explainer: How the December 31 riders\u2019 strike could hit q-comm &amp; food delivery",
+        "link": "https://economictimes.indiatimes.com/tech/technology/ettech-explainer-how-the-december-31-riders-strike-could-hit-q-comm-food-delivery/articleshow/126233671.cms",
+        "published": "Mon, 29 Dec 2025 19:13:04 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Quick commerce and food delivery riders are set to strike nationwide on December 31, potentially disrupting New Year's Eve orders. Unions are demanding better job security, pay, and working conditions. Platforms are preparing by offering year-end deals and revamping apps to mitigate the impact of the planned disruptions."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/ettechs-2025-year-in-review-special/articleshow/126233370.cms",
+        "title": "ETtech\u2019s 2025 Year in Review Special",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/ettechs-2025-year-in-review-special/articleshow/126233370.cms",
+        "published": "Mon, 29 Dec 2025 19:05:30 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Today, we look at late-stage deals amid an IPO frenzy, the changing paradigm in the quick commerce space, top level churn at India\u2019s tech majors and startups, and lastly, big names that went out of business this year."
     }
 ]
