📚 Auto-update: News data refreshed - 2025-12-29 15:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -32126,5 +32126,77 @@
         "published": "Mon, 29 Dec 2025 19:05:30 +0530",
         "source": "Tech-Economic Times",
         "summary": "Today, we look at late-stage deals amid an IPO frenzy, the changing paradigm in the quick commerce space, top level churn at India\u2019s tech majors and startups, and lastly, big names that went out of business this year."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/29/the-32-top-enterprise-tech-startups-from-disrupt-startup-battlefield/",
+        "title": "The 32 top enterprise tech startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/29/the-32-top-enterprise-tech-startups-from-disrupt-startup-battlefield/",
+        "published": "Mon, 29 Dec 2025 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the enterprise tech Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://www.theverge.com/news/850689/camera-focal-lens-technology-research",
+        "title": "This experimental camera can focus on everything at once",
+        "link": "https://www.theverge.com/news/850689/camera-focal-lens-technology-research",
+        "published": "2025-12-29T09:50:20-05:00",
+        "source": "The Verge",
+        "summary": "A camera lens, historically, can only focus on one thing at a time, just like the human eye. That could be a thing of the past, though, thanks to a breakthrough lens technology developed by researchers at Carnegie Mellon University (CMU) that can bring every part of a scene into sharp focus, capturing finer details [&#8230;]"
+    },
+    {
+        "id": "https://www.zdnet.com/article/ces-2026-top-trends/",
+        "title": "CES 2026 trends to watch: 5 biggest topics we're expecting at the world's biggest tech show",
+        "link": "https://www.zdnet.com/article/ces-2026-top-trends/",
+        "published": "Mon, 29 Dec 2025 15:05:00 GMT",
+        "source": "Latest news",
+        "summary": "From foldable phones to AI advancements to all the TV screens, here's what you can expect."
+    },
+    {
+        "id": "https://www.zdnet.com/article/rolling-square-aircard-pro-dual-review/",
+        "title": "I've tested a lot of wallet finder tags, but this one's the best - here's why it rocks",
+        "link": "https://www.zdnet.com/article/rolling-square-aircard-pro-dual-review/",
+        "published": "Mon, 29 Dec 2025 15:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Rolling Square's AirCard Pro Dual has one of the loudest buzzers I've tested and glow-in-the-dark inserts."
+    },
+    {
+        "id": "https://www.zdnet.com/article/facebook-app-nobook-ad-free/",
+        "title": "This ad-free Facebook app made my feed enjoyable again for the first time in years",
+        "link": "https://www.zdnet.com/article/facebook-app-nobook-ad-free/",
+        "published": "Mon, 29 Dec 2025 14:57:08 GMT",
+        "source": "Latest news",
+        "summary": "Facebook ads and suggested posts were ruining my feed. Then I tried this free open-source app."
+    },
+    {
+        "id": "https://www.zdnet.com/article/k3-ultramulti-edc-keychain-tool-review/",
+        "title": "This viral keychain tool lives up to the hype, but its best feature was unexpected",
+        "link": "https://www.zdnet.com/article/k3-ultramulti-edc-keychain-tool-review/",
+        "published": "Mon, 29 Dec 2025 14:37:00 GMT",
+        "source": "Latest news",
+        "summary": "The K3 Ultramulti EDC keychain tool is many things in one, including a flashlight, laser pointer, and lighter."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/top-talent-at-indias-gcc-building-unmanned-aircraft",
+        "title": "Top talent at India\u2019s GCC; Building unmanned aircraft",
+        "link": "https://yourstory.com/2025/12/top-talent-at-indias-gcc-building-unmanned-aircraft",
+        "published": "Mon, 29 Dec 2025 02:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Global Capability Centres (GCCs) in India have been shining examples of what India\u2019s technology industry has to offer, as the segment continues to expand both in value and volume terms."
+    },
+    {
+        "id": "https://inc42.com/buzz/sbi-mutual-fund-sells-inr-108-cr-worth-nazara-shares-in-block-deal/",
+        "title": "SBI Mutual Fund Sells INR 108 Cr Worth Nazara Shares In Block Deal",
+        "link": "https://inc42.com/buzz/sbi-mutual-fund-sells-inr-108-cr-worth-nazara-shares-in-block-deal/",
+        "published": "Mon, 29 Dec 2025 14:35:11 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Nazara Terminates Deal To Acquire Additional Stake In PokerBaazi\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/08/Nazara-Feature-Image.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Listed gaming major Nazara Technologies saw a large secondary transaction on December 29, with SBI Mutual Fund selling 45.09 Lakh&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/honasa-ceo-varun-alagh-buys-shares-worth-inr-50-cr/",
+        "title": "Honasa CEO Varun Alagh Buys Shares Worth INR 50 Cr From Fireside Ventures",
+        "link": "https://inc42.com/buzz/honasa-ceo-varun-alagh-buys-shares-worth-inr-50-cr/",
+        "published": "Mon, 29 Dec 2025 14:30:08 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Honasa CEO Varun Alagh Buys Shares Worth INR 50 Cr From Fireside Ventures\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/01/honasa-ftr.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Honasa Consumer\u2019s cofounder and CEO Varun Alagh has increased his stake in the beauty and personal care (BPC) major by&#8230;"
     }
 ]
